--- a/package.json
+++ b/package.json
@@ -3,17 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "NODE_ENV=test mocha --recursive"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "chai": "^3.4.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.3.4",
     "express": "~4.13.1",
     "express-autoroute": "^1.2.4",
+    "express-validator": "^2.18.0",
     "jade": "~1.11.0",
+    "mocha": "^2.3.4",
     "morgan": "~1.6.1",
     "require-directory": "^2.1.1",
-    "serve-favicon": "~2.3.0"
-  }
+    "serve-favicon": "~2.3.0",
+    "should": "^8.1.1",
+    "supertest": "^1.1.0"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "supertest": "^1.1.0",
+    "should": "^8.1.1"
+  },
+  "description": "API System",
+  "main": "app.js",
+  "author": "Peng Li",
+  "license": "MIT"
 }
