--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
+    "express-di": "^4.1.1",
     "express-autoroute": "^1.2.4",
     "express-validator": "^2.18.0",
     "jade": "~1.11.0",
