--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-di": "^4.1.1",
     "express-autoroute": "^1.2.4",
     "express-validator": "^2.18.0",
+    "multer":"~1.1.0",
     "jade": "~1.11.0",
     "mocha": "^2.3.4",
     "morgan": "~1.6.1",
