--- a/package.json
+++ b/package.json
@@ -3,23 +3,31 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "test": "NODE_ENV=test mocha --recursive"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "chai": "^3.4.1",
-    "cookie-parser": "~1.3.5",
+    "config": "^1.19.0",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "^1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
-    "express-di": "^4.1.1",
     "express-autoroute": "^1.2.4",
+    "express-di": "^4.1.1",
+    "express-session": "^1.13.0",
     "express-validator": "^2.18.0",
-    "multer":"~1.1.0",
     "jade": "~1.11.0",
+    "lingo": "0.0.5",
     "mocha": "^2.3.4",
+    "mongoose": "^4.4.5",
     "morgan": "~1.6.1",
+    "multer": "~1.1.0",
+    "redis": "^2.4.2",
     "require-directory": "^2.1.1",
     "serve-favicon": "~2.3.0",
     "should": "^8.1.1",
@@ -30,6 +38,22 @@
     "mocha": "^2.3.4",
     "supertest": "^1.1.0",
     "should": "^8.1.1"
+  },
+  "jshintConfig": {
+    "undef": true,
+    "unused": true,
+    "node": true,
+    "strict": false,
+    "predef": [
+      "context",
+      "describe",
+      "it",
+      "http",
+      "Redis",
+      "DB",
+      "User",
+      "Log"
+    ]
   },
   "description": "API System",
   "main": "app.js",
